# nn-landscape

./: .gitignore  README.md  pyproject.toml
.claude/skills/build-edition/: SKILL.md
.claude/skills/refresh-nanonets-context/: SKILL.md
data/: nanonets_context.md  sources.yaml  views.yaml
docs/: about.html  for-dl-team.html  for-prathamesh.html  index.html  robots.txt
docs/assets/: styles.css
docs/brainstorms/: 2026-05-21-nanonets-landscape-monitor-brainstorm.md
docs/plans/: 2026-05-21-feat-nanonets-landscape-monitor-plan.md
src/landscape/: cli.py  dedup.py  ingest.py  models.py  normalize.py  paths.py  render.py
state/: questions_for_team.md  seen.json
templates/: about.html.j2  edition.html.j2
templates/partials/: item_card.html.j2
tests/integration/: test_ingest_golden.py  test_render_snapshot.py
tests/integration/__snapshots__/: test_render_snapshot.ambr
tests/unit/: test_dedup.py  test_models.py  test_normalize.py
