[project]
name = "landscape"
version = "0.1.0"
description = "Nanonets AI Landscape Monitor — a curated, agent-built intelligence dashboard for the Nanonets DL team."
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "Shehral Ali", email = "ali.shehral@gmail.com" },
]
dependencies = [
  "feedparser>=6.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "syrupy>=4.6",
]

[project.scripts]
landscape = "landscape.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/landscape"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
